# routes/user.js
@@ -28,6 +28,7 @@ router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
+
     await user_utils.markAsFavorite(user_id,recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
     } catch(error){
@@ -35,22 +36,76 @@ router.post('/favorites', async (req,res,next) => {
   }
 })
 
-/**
- * This path returns the favorites recipes that were saved by the logged-in user
- */
-router.get('/favorites', async (req,res,next) => {
-  try{
+// /**
+//  * This path returns the favorites recipes that were saved by the logged-in user
+//  */
+
+router.get('/favorites', async (req, res, next) => {
+  try {
     const user_id = req.session.user_id;
-    let favorite_recipes = {};
-    const recipes_id = await user_utils.getFavoriteRecipes(user_id);
-    let recipes_id_array = [];
-    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    const recipes = await user_utils.getFavoriteRecipes(user_id);
+    const recipeIds = recipes.map((recipe) => recipe.recipeId);
+    
+    let results = [];
+    for (const recipeId of recipeIds) {
+      const recipe = await recipe_utils.getRecipeDetails(recipeId);
+      results.push(recipe);
+    }
+    
     res.status(200).send(results);
-  } catch(error){
-    next(error); 
+  } catch (error) {
+    next(error);
   }
 });
+
+
+
+/**
+ * This path gets body with recipe's details and save this recipe in the UserRecipes table and list in recipes tables
+ */
+router.post('/addMyRecipe', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipe_id = req.body.id;
+
+    await user_utils.markAsMyRecipe(user_id,recipe_id); 
+
+    // Get the recipe details from the request body
+    const recipeDetails = req.body;
+
+    // Call the function to add the recipe
+    await recipe_utils.addRecipe(recipeDetails);
+
+    res.status(200).send("Your recipe has been added successfully.");
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path returns the recipes added by the logged-in user
+ */
+router.get('/addMyRecipe', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipes = await user_utils.getMyRecipe(user_id);
+    console.log("1: ", recipes)
+    const recipeIds = recipes.map((recipe) => recipe.recipe_id);
+
+    console.log("2: ", recipeIds)
+
+    let results = [];
+    for (const recipeId of recipeIds) {
+      const recipe = await recipe_utils.getRecipeDetails(recipeId);
+      results.push(recipe);
+    }
+    
+    res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
 
 
 
